[gd_scene load_steps=27 format=2]

[ext_resource path="res://Escenes/Tilemaps.gd" type="Script" id=1]
[ext_resource path="res://Imatges/FONS DEFINITIU.png" type="Texture" id=2]
[ext_resource path="res://Kenney/Spritesheet/platformIndustrial_sheet.png" type="Texture" id=3]
[ext_resource path="res://Escenes/PROTAGONISTA.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenes/Lava.gd" type="Script" id=5]
[ext_resource path="res://Imatges/imatges alex/Lava_feta_miguel_1.png" type="Texture" id=6]
[ext_resource path="res://Imatges/imatges alex/Lava_feta_miguel_2.png" type="Texture" id=7]
[ext_resource path="res://Escenes/Menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Imatges/imatges alex/Botó menú.png" type="Texture" id=9]
[ext_resource path="res://Escenes/Area2D.gd" type="Script" id=10]
[ext_resource path="res://Imatges/imatges alex/Bandera_final.png" type="Texture" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 70, 0, 70, 70, 0, 70 )

[sub_resource type="TileSet" id=12]
resource_local_to_scene = true
0/name = "platformIndustrial_sheet.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 70, 70 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "platformIndustrial_sheet.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 140, 70, 70 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "platformIndustrial_sheet.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 140, 70, 70 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "platformIndustrial_sheet.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 70, 70, 70 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "platformIndustrial_sheet.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 210, 70, 70 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "platformIndustrial_sheet.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 280, 70, 70 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "platformIndustrial_sheet.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 350, 350, 70, 70 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "platformIndustrial_sheet.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 210, 0, 70, 70 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "platformIndustrial_sheet.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 280, 0, 70, 70 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "platformIndustrial_sheet.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 210, 70, 70, 70 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "platformIndustrial_sheet.png 10"
10/texture = ExtResource( 3 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 280, 70, 70, 70 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "lava en moviment",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 318.692, 823.575 )

[sub_resource type="CapsuleShape2D" id=15]
radius = 133.082
height = 187.924

[node name="Node2D" type="Node2D"]
rotation = -0.000481323
script = ExtResource( 1 )

[node name="Fons" type="Sprite" parent="."]
position = Vector2( 7729.51, 385.984 )
scale = Vector2( 9, 9 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( -68, -23, 1726, 136 )

[node name="Nivell" type="Node2D" parent="."]

[node name="Terreny" type="TileMap" parent="Nivell"]
position = Vector2( 3, 0.000481323 )
tile_set = SubResource( 12 )
cell_size = Vector2( 70, 70 )
collision_layer = 4
format = 1
tile_data = PoolIntArray( 393238, 1610612746, 0, 458771, 1610612746, 0, 458831, 1610612746, 0, 458833, 1610612746, 0, 458835, 1610612746, 0, 458837, 1610612746, 0, 458839, 1610612746, 0, 524302, 1610612744, 0, 524303, 1610612746, 0, 524304, 1073741832, 0, 524313, 1610612746, 0, 524315, 1610612744, 0, 524316, 1610612746, 0, 524317, 1073741832, 0, 524322, 1610612746, 0, 524356, 1073741834, 0, 524359, 1073741834, 0, 524362, 1073741834, 0, 524366, 1610612746, 0, 524368, 1610612746, 0, 524370, 1610612746, 0, 524372, 1610612746, 0, 524374, 1610612746, 0, 524377, 1610612744, 0, 524378, 1610612746, 0, 524379, 1610612746, 0, 524380, 1610612746, 0, 524381, 1073741832, 0, 524383, 536870920, 0, 524384, 536870922, 0, 524385, 536870922, 0, 524386, 536870922, 0, 524387, 536870922, 0, 524388, 8, 0, 524391, 1610612744, 0, 524392, 1073741832, 0, 524395, 1610612744, 0, 524396, 1610612746, 0, 524397, 1073741832, 0, 524399, 1610612744, 0, 524400, 1073741832, 0, 524500, 1610612746, 0, 524501, 1610612746, 0, 524502, 1610612746, 0, 524503, 1610612746, 0, 524504, 1610612746, 0, 589879, 1073741834, 0, 589919, -536870902, 0, 655401, 1610612746, 0, 655409, 1610612744, 0, 655410, 1610612746, 0, 655411, 1073741832, 0, 655424, 1073741834, 0, 655455, -536870902, 0, 720934, 1610612746, 0, 720940, 1610612744, 0, 720941, 1610612746, 0, 720942, 1073741832, 0, 720957, 536870920, 0, 720958, 1073741832, 0, 720991, -536870902, 0, 786489, 1073741834, 0 )

[node name="Jugador" parent="Nivell" instance=ExtResource( 4 )]
position = Vector2( 1087.82, 436.794 )
collision_layer = 513
collision_mask = 518

[node name="Camera2D" type="Camera2D" parent="Nivell/Jugador"]
position = Vector2( 292.187, -3.65688 )
current = true

[node name="Lava" type="Area2D" parent="Nivell"]
position = Vector2( 886.225, -34.7346 )
angular_damp = 0.0
collision_layer = 2
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Nivell/Lava"]
position = Vector2( -837.609, 473.909 )
rotation = 14.0499
scale = Vector2( 16.5972, 5.32408 )
frames = SubResource( 13 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nivell/Lava"]
position = Vector2( -1046.68, 506.76 )
rotation = 12.4791
shape = SubResource( 14 )

[node name="Control" type="Control" parent="."]
visible = false
margin_left = -11.9583
margin_top = -21.5249
margin_right = 28.0417
margin_bottom = 18.4751
rect_rotation = -9.62756

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Menu" parent="Control/CanvasLayer" instance=ExtResource( 8 )]
visible = false
margin_left = 490.0
margin_top = 313.0
margin_right = 490.0
margin_bottom = 314.0
size_flags_stretch_ratio = 0.0

[node name="TextureButton" type="TextureButton" parent="Control/CanvasLayer"]
margin_left = 854.17
margin_top = 4.59747
margin_right = 1054.17
margin_bottom = 104.597
texture_normal = ExtResource( 9 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Bandera" type="Area2D" parent="."]
position = Vector2( 14764.3, 1014.68 )
collision_layer = 512
collision_mask = 512

[node name="Bandera_final" type="Sprite" parent="Bandera"]
position = Vector2( 320.42, -588.673 )
scale = Vector2( 3.73742, 3.59487 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bandera"]
position = Vector2( 264.54, -557.78 )
shape = SubResource( 15 )

[connection signal="body_entered" from="Nivell/Lava" to="Nivell/Jugador" method="_on_Area2D_body_entered"]
[connection signal="pressed" from="Control/CanvasLayer/Menu/VSplitContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Menu/VSplitContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/Menu/VSplitContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="body_entered" from="Bandera" to="." method="_on_Bandera_body_entered"]

[editable path="Control/CanvasLayer/Menu"]
